--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -578,7 +578,7 @@
             "order": 3,
             "name": "공증만 10회",
             "created_at": "2024-12-08T13:23:32.528363",
-            "updated_at": "2024-12-30T07:08:15.290301",
+            "updated_at": "2024-12-30T08:07:10.437941",
             "trigger_key": null,
             "repeat_count": 10,
             "is_nested": true,
@@ -605,8 +605,8 @@
                 },
                 {
                     "type": "delay",
-                    "display_text": "지연시간 : 0.0331초",
-                    "duration": 0.0331,
+                    "display_text": "지연시간 : 0.0557초",
+                    "duration": 0.0557,
                     "order": 3
                 }
             ]
@@ -690,7 +690,7 @@
             "order": 5,
             "name": "동동주 마시기 - 1회",
             "created_at": "2024-11-30T07:08:49.271692",
-            "updated_at": "2024-12-29T07:57:23.304894",
+            "updated_at": "2024-12-30T08:09:03.870044",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -765,7 +765,7 @@
             "order": 6,
             "name": "동동주 마시기 - 2회",
             "created_at": "2024-11-30T07:08:49.271692",
-            "updated_at": "2024-12-29T10:11:52.217630",
+            "updated_at": "2024-12-30T08:09:03.910175",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -3332,7 +3332,7 @@
             "order": 24,
             "name": "★1초씩 무한★ 첨 사냥 - 1",
             "created_at": "2024-12-08T21:25:24.196785",
-            "updated_at": "2024-12-29T12:13:38.271237",
+            "updated_at": "2024-12-30T08:09:04.004930",
             "trigger_key": {
                 "is_system_key": false,
                 "key_code": "숫자패드 *",
@@ -3354,13 +3354,29 @@
                 {
                     "order": 2,
                     "type": "logic",
+                    "display_text": "동동주 마시기 - 1회",
+                    "logic_id": "9614e85c-3ceb-423b-97ea-e17bfc0101fc",
+                    "logic_name": "동동주 마시기 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 3,
+                    "type": "logic",
+                    "display_text": "동동주 마시기 - 2회",
+                    "logic_id": "ec95ec19-80eb-4208-acf7-26c6a2d71848",
+                    "logic_name": "동동주 마시기 - 2회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 4,
+                    "type": "logic",
                     "display_text": "ㄴㄴ 버무리기 사이클 하위 - 활력, 마비",
                     "logic_id": "4bea8e6b-218e-415c-95e0-e350c4eb5f8f",
                     "logic_name": "ㄴㄴ 버무리기 사이클 하위 - 활력, 마비",
                     "repeat_count": 1
                 },
                 {
-                    "order": 3,
+                    "order": 5,
                     "type": "logic",
                     "display_text": "공증만 10회 후 풀체",
                     "logic_id": "11163ad3-7c9b-4b39-9176-0c49bff1c702",
@@ -3518,7 +3534,7 @@
             "order": 26,
             "name": "ㄴ 첨사냥 중첩로직용 - 241223 최적화",
             "created_at": "2024-11-30T10:25:06.438732",
-            "updated_at": "2024-12-30T07:23:02.676970",
+            "updated_at": "2024-12-30T08:07:01.414520",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -10663,7 +10679,7 @@
             "order": 36,
             "name": "ㄴㄴ 버무리기 사이클 하위 - 활력, 마비",
             "created_at": "2024-11-30T10:25:06.438732",
-            "updated_at": "2024-12-29T12:13:11.075092",
+            "updated_at": "2024-12-30T08:08:07.204325",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -10698,14 +10714,6 @@
                     "display_text": "((상하좌우 1초)) - 마비",
                     "logic_id": "728ffa37-127b-40f3-a9b6-70dbc5b882db",
                     "logic_name": "((상하좌우 1초)) - 마비",
-                    "repeat_count": 1
-                },
-                {
-                    "order": 5,
-                    "type": "logic",
-                    "display_text": "((0.72초)) 보호 무장 힘 - 공증 용",
-                    "logic_id": "268c3a4a-b945-485a-bd4c-01d60a9cd92d",
-                    "logic_name": "((0.72초)) 보호 무장 힘 - 공증 용",
                     "repeat_count": 1
                 }
             ]
